{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 78,
  "lineage": "457cd00a-675d-3839-598c-fabd0c0eb5cd",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/zones/us-central1-a/disks/frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/psychic-lens-351807/zones/us-central1-a/instances/frontend",
            "instance_id": "3460709084911216027",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "true"
            },
            "metadata_fingerprint": "MtFI4RW9Cvo=",
            "name": "frontend",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/regions/us-central1/subnetworks/default",
                "subnetwork_project": "psychic-lens-351807"
              }
            ],
            "project": "psychic-lens-351807",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/zones/us-central1-a/instances/frontend",
            "service_account": [
              {
                "email": "595042382486-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "module": "module.cloud_nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "psychic-lens-351807/us-central1/cloud-router-nat/poc-nik",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 128,
            "name": "poc-nik",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "psychic-lens-351807",
            "region": "us-central1",
            "router": "cloud-router-nat",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_nat.google_compute_router.router",
            "module.cloud_nat.random_string.name_suffix",
            "module.cloud_router_nat.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router_nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-03T04:19:20.514-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/psychic-lens-351807/regions/us-central1/routers/cloud-router-nat",
            "name": "cloud-router-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "project": "psychic-lens-351807",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/regions/us-central1/routers/cloud-router-nat"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/zones/us-central1-a/instanceGroups/terraform-webservers",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-01-03T03:25:47.221-08:00",
            "enable_cdn": false,
            "fingerprint": "aBKIrX7jo-g=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/healthChecks/group-http-lb-hc-default"
            ],
            "id": "projects/psychic-lens-351807/global/backendServices/group-http-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "group-http-lb-backend-default",
            "port_name": "http",
            "project": "psychic-lens-351807",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/backendServices/group-http-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance.frontend",
            "google_compute_instance_group.webservers",
            "module.gce-lb-http.google_compute_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-03T03:25:34.586-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/group-http-lb-hc-0",
            "log_config": [],
            "name": "group-http-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 1000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/group-http-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.frontend",
            "google_compute_instance_group.webservers"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.120.191.159",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-03T03:25:34.662-08:00",
            "id": "projects/psychic-lens-351807/global/addresses/group-http-lb-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "group-http-lb-address",
            "prefix_length": 0,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/addresses/group-http-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/psychic-lens-351807/global/forwardingRules/group-http-lb",
            "ip_address": "34.120.191.159",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb",
            "port_range": "80",
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/beta/projects/psychic-lens-351807/global/forwardingRules/group-http-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/targetHttpProxies/group-http-lb-http-proxy"
          },
          "dependencies": [
            "google_compute_instance.frontend",
            "google_compute_instance_group.webservers",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-03T03:26:23.773-08:00",
            "id": "projects/psychic-lens-351807/global/targetHttpProxies/group-http-lb-http-proxy",
            "name": "group-http-lb-http-proxy",
            "project": "psychic-lens-351807",
            "proxy_bind": false,
            "proxy_id": 2765922000782863920,
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/targetHttpProxies/group-http-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/urlMaps/group-http-lb-url-map"
          },
          "dependencies": [
            "google_compute_instance.frontend",
            "google_compute_instance_group.webservers",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-03T03:26:10.558-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/backendServices/group-http-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "3ghFWaElJyM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/psychic-lens-351807/global/urlMaps/group-http-lb-url-map",
            "map_id": 2963578422969347645,
            "name": "group-http-lb-url-map",
            "path_matcher": [],
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/urlMaps/group-http-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.frontend",
            "google_compute_instance_group.webservers",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vpc_non_prod_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "fw-65000-egress-deny-all-all-all-all",
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2023-01-03T04:11:30.359-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Override default allow all ports egress rule",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/fw-65000-egress-deny-all-all-all-all",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-65000-egress-deny-all-all-all-all",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 65000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/fw-65000-egress-deny-all-all-all-all",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-egress-allow-all-vpc-all-all",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-03T04:11:30.408-08:00",
            "deny": [],
            "description": "Allows for internal VPC communication",
            "destination_ranges": [
              "172.18.0.0/16"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/fw-egress-allow-all-vpc-all-all",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-egress-allow-all-vpc-all-all",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 1000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/fw-egress-allow-all-vpc-all-all",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-egress-allow-nt-http-https",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-03T04:11:30.484-08:00",
            "deny": [],
            "description": "Allows for outbound from Shared VPC to Internet for software download",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/fw-egress-allow-nt-http-https",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-egress-allow-nt-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 1000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/fw-egress-allow-nt-http-https",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nt-egress-allow-http-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-ingress-allow-nt-gce-hlthchk-tcp",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-03T04:11:30.412-08:00",
            "deny": [],
            "description": "GCE Health Checks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/fw-ingress-allow-nt-gce-hlthchk-tcp",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-ingress-allow-nt-gce-hlthchk-tcp",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 1000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/fw-ingress-allow-nt-gce-hlthchk-tcp",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nt-ingress-allow-health-check-tcp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-ingress-allow-nt-mysql-proxy-tcp-3306-to-3307",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306",
                  "3307"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-03T04:11:30.359-08:00",
            "deny": [],
            "description": "Allow access to CloudSQL Proxy",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/fw-ingress-allow-nt-mysql-proxy-tcp-3306-to-3307",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-ingress-allow-nt-mysql-proxy-tcp-3306-to-3307",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 1000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/fw-ingress-allow-nt-mysql-proxy-tcp-3306-to-3307",
            "source_ranges": [
              "10.200.100.0/23",
              "10.200.102.0/24",
              "10.200.99.0/24",
              "10.212.134.0/24",
              "114.143.131.82/32",
              "117.232.124.98/32",
              "172.18.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nt-ingress-allow-mysql-proxy-tcp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-ingress-allow-sa-bq-visualiser-elb-tcp-80",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-03T04:11:30.361-08:00",
            "deny": [],
            "description": "GCE Health Checks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/psychic-lens-351807/global/firewalls/fw-ingress-allow-sa-bq-visualiser-elb-tcp-80",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-ingress-allow-sa-bq-visualiser-elb-tcp-80",
            "network": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/networks/default",
            "priority": 1000,
            "project": "psychic-lens-351807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psychic-lens-351807/global/firewalls/fw-ingress-allow-sa-bq-visualiser-elb-tcp-80",
            "source_ranges": [
              "34.111.255.131/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [
              "sa-tlabs-edw-dev-bq-visualiser@tlabs-edw-dev.iam.gserviceaccount.com"
            ],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}